refactored restaurant controller