@@ -1,80 +1,68 @@
 package dev.resto.fal.specification;
 
-import dev.resto.fal.entity.Restaurant;
-import dev.resto.fal.entity.Tag;
 import dev.resto.fal.DTO.FilterRequest;
+import dev.resto.fal.entity.RestaurantRating;
 import jakarta.persistence.criteria.*;
 import org.springframework.data.jpa.domain.Specification;
+import org.springframework.data.domain.Sort;
+import dev.resto.fal.entity.Restaurant;
+import dev.resto.fal.entity.Tag;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class RestaurantSpecification {
 
     public static Specification<Restaurant> containsSearchBar(String searchBar) {
-        return (root, query, cb) -> {
-            if (searchBar == null || searchBar.isBlank()) {
-                return cb.conjunction();
+        return (root, query, criteriaBuilder) -> {
+            if (searchBar == null || searchBar.isEmpty()) {
+                return criteriaBuilder.conjunction();
             }
-            String likeSearch = "%" + searchBar.toLowerCase() + "%";
-            return cb.or(
-                    cb.like(cb.lower(root.get("name")), likeSearch),
-                    cb.like(cb.lower(root.get("address")), likeSearch)
-            );
+            Predicate namePredicate = criteriaBuilder.like(root.get("name"), "%" + searchBar + "%");
+            Predicate addressPredicate = criteriaBuilder.like(root.get("address"), "%" + searchBar + "%");
+            return criteriaBuilder.or(namePredicate, addressPredicate);
         };
     }
 
     public static Specification<Restaurant> hasTags(List<Tag> tags, boolean strictTags) {
-        return (root, query, cb) -> {
+        return (root, query, criteriaBuilder) -> {
             if (tags == null || tags.isEmpty()) {
-                return cb.conjunction();
+                return criteriaBuilder.conjunction();
             }
 
-            // Join with the RestaurantRating -> Tag
-            Join<Object, Object> ratingsJoin = root.join("ratings");
-            Join<Object, Object> tagsJoin = ratingsJoin.join("tag");
-
             if (strictTags) {
-                // Only restaurants with ALL selected tags
-                Subquery<Long> subquery = query.subquery(Long.class);
-                Root<Restaurant> subRoot = subquery.from(Restaurant.class);
-                Join<Object, Object> subRatingsJoin = subRoot.join("ratings");
-                Join<Object, Object> subTagsJoin = subRatingsJoin.join("tag");
-
-                subquery.select(subRoot.get("id"))
-                        .where(cb.and(
-                                cb.equal(subRoot.get("id"), root.get("id")),
-                                subTagsJoin.get("id").in(tags.stream().map(Tag::getId).toList())
-                        ))
-                        .groupBy(subRoot.get("id"))
-                        .having(cb.equal(cb.count(subTagsJoin.get("id")), tags.size()));
-
-                return cb.exists(subquery);
+                return criteriaBuilder.and(
+                        tags.stream()
+                                .map(tag -> {
+                                    Subquery<Long> subquery = query.subquery(Long.class);
+                                    Root<RestaurantRating> subRoot = subquery.from(RestaurantRating.class);
+                                    Join<RestaurantRating, Tag> tagJoin = subRoot.join("tag");
+                                    subquery.select(criteriaBuilder.count(subRoot))
+                                            .where(criteriaBuilder.and(
+                                                    criteriaBuilder.equal(subRoot.get("restaurant"), root),
+                                                    criteriaBuilder.equal(tagJoin.get("name"), tag.getName())
+                                            ));
+                                    return criteriaBuilder.greaterThan(subquery, 0L);
+                                })
+                                .toArray(Predicate[]::new)
+                );
             } else {
-                // Restaurants with ANY of the selected tags
-                return tagsJoin.get("id").in(tags.stream().map(Tag::getId).toList());
+                Join<Restaurant, RestaurantRating> ratingsJoin = root.join("ratings", JoinType.INNER);
+                Join<RestaurantRating, Tag> tagJoin = ratingsJoin.join("tag", JoinType.INNER);
+
+                Predicate tagPredicate = tagJoin.get("name").in(tags.stream()
+                        .map(Tag::getName)
+                        .collect(Collectors.toList()));
+                return criteriaBuilder.or(tagPredicate);
             }
         };
     }
 
-    public static Specification<Restaurant> sortBy(FilterRequest filterRequest) {
-        return (root, query, cb) -> {
-            if (filterRequest.getSortBy() == null) {
-                query.orderBy(cb.desc(root.get("dateAdded"))); // Default sort
-                return cb.conjunction();
-            }
 
-            switch (filterRequest.getSortBy()) {
-                case MOST_RECENT -> query.orderBy(cb.desc(root.get("dateAdded")));
-                case LEAST_RECENT -> query.orderBy(cb.asc(root.get("dateAdded")));
-                case POPULAR -> query.orderBy(cb.desc(root.get("numberOfReviews")));
-                case LEAST_POPULAR -> query.orderBy(cb.asc(root.get("numberOfReviews")));
-                case BEST_MATCH -> {
-                    Join<Object, Object> ratingsJoin = root.join("ratings", JoinType.LEFT);
-                    query.groupBy(root.get("id"));
-                    query.orderBy(cb.desc(cb.count(ratingsJoin.get("id"))));
-                }
-            }
-            return cb.conjunction();
-        };
+
+    public static Sort sortBy(FilterRequest filterRequest) {
+        // Using the compareTo method in the Restaurant entity for sorting
+        // Sort by the number of reviews or any other field
+        return Sort.by(Sort.Order.asc("name")); // Use custom field if needed
     }
 }
